🔧 Melhora animação das palavras: Adiciona 20px de espaço entre cada palavra (80px→100px / 104px→124px) + ajusta keyframes + adiciona justify-start para melhor centralização horizontal

--- a/index-figma.html
+++ b/index-figma.html
@@ -28,13 +28,13 @@
         @keyframes slideWords {
             0% { transform: translateY(0); }
             22% { transform: translateY(0); }
-            25% { transform: translateY(-104px); }
-            47% { transform: translateY(-104px); }
-            50% { transform: translateY(-208px); }
-            72% { transform: translateY(-208px); }
-            75% { transform: translateY(-312px); }
-            97% { transform: translateY(-312px); }
-            100% { transform: translateY(-416px); }
+            25% { transform: translateY(-124px); } /* Ajustado: 104px + 20px = 124px */
+            47% { transform: translateY(-124px); }
+            50% { transform: translateY(-248px); }
+            72% { transform: translateY(-248px); }
+            75% { transform: translateY(-372px); }
+            97% { transform: translateY(-372px); }
+            100% { transform: translateY(-496px); } /* Total para 4 palavras com 124px cada */
         }
         .animated-words {
             animation: slideWords 10s infinite;
@@ -120,30 +120,30 @@
                         Creditos para impulsar tu
                     </h1>
                     <!-- Animated Words -->
-                    <div class="relative h-[104px] overflow-hidden">
+                    <div class="relative h-[124px] overflow-hidden">
                         <div class="animated-words absolute">
-                            <div class="h-[104px] flex items-center">
+                            <div class="h-[124px] flex items-center justify-start">
                                 <span class="text-[80px] font-bold text-black/90 leading-[102px] tracking-[-3.2px]">negócio</span>
                             </div>
-                            <div class="h-[104px] flex items-center">
+                            <div class="h-[124px] flex items-center justify-start">
                                 <span class="text-[80px] font-bold text-black/90 leading-[102px] tracking-[-3.2px]">tienda</span>
                             </div>
-                            <div class="h-[104px] flex items-center">
+                            <div class="h-[124px] flex items-center justify-start">
                                 <span class="text-[80px] font-bold text-black/90 leading-[102px] tracking-[-3.2px]">lojinha</span>
                             </div>
-                            <div class="h-[104px] flex items-center">
+                            <div class="h-[124px] flex items-center justify-start">
                                 <span class="text-[80px] font-bold text-black/90 leading-[102px] tracking-[-3.2px]">mercado</span>
                             </div>
-                            <div class="h-[104px] flex items-center">
+                            <div class="h-[124px] flex items-center justify-start">
                                 <span class="text-[80px] font-bold text-black/90 leading-[102px] tracking-[-3.2px]">negócio</span>
                             </div>
-                            <div class="h-[104px] flex items-center">
+                            <div class="h-[124px] flex items-center justify-start">
                                 <span class="text-[80px] font-bold text-black/90 leading-[102px] tracking-[-3.2px]">tienda</span>
                             </div>
-                            <div class="h-[104px] flex items-center">
+                            <div class="h-[124px] flex items-center justify-start">
                                 <span class="text-[80px] font-bold text-black/90 leading-[102px] tracking-[-3.2px]">lojinha</span>
                             </div>
-                            <div class="h-[104px] flex items-center">
+                            <div class="h-[124px] flex items-center justify-start">
                                 <span class="text-[80px] font-bold text-black/90 leading-[102px] tracking-[-3.2px]">mercado</span>
                             </div>
                         </div>
