🔧 Corrige alinhamento das palavras animadas: Horizontal centralizado (justify-center) + Vertical no início como antes (items-start/align-items: flex-start)

--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
             height: 80px; /* Mantém 80px para não afetar entrelinha */
             margin-bottom: 20px; /* 20px de distância entre palavras */
             display: flex;
-            align-items: center;
-            justify-content: center; /* Centraliza horizontalmente no espaço */
+            align-items: flex-start; /* Vertical: mantém no início como estava */
+            justify-content: center; /* Horizontal: centralizado */
             font-size: 80px;
             font-weight: 700;
             line-height: 80px;
