🔧 Alinha palavras animadas à esquerda: justify-content/justify-start (horizontal à esquerda) + mantém align-items/items-start (vertical no topo)

--- a/index-figma.html
+++ b/index-figma.html
@@ -122,28 +122,28 @@
                     <!-- Animated Words -->
                     <div class="relative h-[124px] overflow-hidden">
                         <div class="animated-words absolute">
-                            <div class="h-[104px] mb-5 flex items-start justify-center">
+                            <div class="h-[104px] mb-5 flex items-start justify-start">
                                 <span class="text-[80px] font-bold text-black/90 leading-[102px] tracking-[-3.2px]">negócio</span>
                             </div>
-                            <div class="h-[104px] mb-5 flex items-start justify-center">
+                            <div class="h-[104px] mb-5 flex items-start justify-start">
                                 <span class="text-[80px] font-bold text-black/90 leading-[102px] tracking-[-3.2px]">tienda</span>
                             </div>
-                            <div class="h-[104px] mb-5 flex items-start justify-center">
+                            <div class="h-[104px] mb-5 flex items-start justify-start">
                                 <span class="text-[80px] font-bold text-black/90 leading-[102px] tracking-[-3.2px]">lojinha</span>
                             </div>
-                            <div class="h-[104px] mb-5 flex items-start justify-center">
+                            <div class="h-[104px] mb-5 flex items-start justify-start">
                                 <span class="text-[80px] font-bold text-black/90 leading-[102px] tracking-[-3.2px]">mercado</span>
                             </div>
-                            <div class="h-[104px] mb-5 flex items-start justify-center">
+                            <div class="h-[104px] mb-5 flex items-start justify-start">
                                 <span class="text-[80px] font-bold text-black/90 leading-[102px] tracking-[-3.2px]">negócio</span>
                             </div>
-                            <div class="h-[104px] mb-5 flex items-start justify-center">
+                            <div class="h-[104px] mb-5 flex items-start justify-start">
                                 <span class="text-[80px] font-bold text-black/90 leading-[102px] tracking-[-3.2px]">tienda</span>
                             </div>
-                            <div class="h-[104px] mb-5 flex items-start justify-center">
+                            <div class="h-[104px] mb-5 flex items-start justify-start">
                                 <span class="text-[80px] font-bold text-black/90 leading-[102px] tracking-[-3.2px]">lojinha</span>
                             </div>
-                            <div class="h-[104px] mb-5 flex items-start justify-center">
+                            <div class="h-[104px] mb-5 flex items-start justify-start">
                                 <span class="text-[80px] font-bold text-black/90 leading-[102px] tracking-[-3.2px]">mercado</span>
                             </div>
                         </div>
