--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             margin-bottom: 20px; /* 20px de distância entre palavras */
             display: flex;
             align-items: flex-start; /* Vertical: mantém no início como estava */
-            justify-content: center; /* Horizontal: centralizado */
+            justify-content: flex-start; /* Horizontal: alinhado à esquerda */
             font-size: 80px;
             font-weight: 700;
             line-height: 80px;
