--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             height: 80px; /* Mantém 80px para não afetar entrelinha */
             margin-bottom: 20px; /* 20px de distância entre palavras */
             display: flex;
-            align-items: flex-start; /* Vertical: mantém no início como estava */
+            align-items: center; /* Vertical: centralizado */
             justify-content: flex-start; /* Horizontal: alinhado à esquerda */
             font-size: 80px;
             font-weight: 700;
