🔧 Corrige entrelinha afetada: Adiciona margin-top: -10px (-mt-2.5) ao container da animação para compensar altura extra e restaurar espaçamento original entre texto e palavra animada

--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
             height: 100px; /* Aumentado para acomodar descenders (j, g) */
             overflow: hidden;
             position: relative;
+            margin-top: -10px; /* Compensa altura extra para manter entrelinha original */
         }
 
         .animated-words {
