--- a/index-figma.html
+++ b/index-figma.html
@@ -120,7 +120,7 @@
                         Creditos para impulsar tu
                     </h1>
                     <!-- Animated Words -->
-                    <div class="relative h-[124px] overflow-hidden">
+                                            <div class="relative h-[124px] overflow-hidden -mt-2.5">
                         <div class="animated-words absolute">
                             <div class="h-[124px] mb-5 flex items-center justify-start">
                                 <span class="text-[80px] font-bold text-black/90 leading-[102px] tracking-[-3.2px]">negócio</span>
