--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         .hero-title {
             font-size: 80px;
             font-weight: 700;
-            line-height: 80px;
+            line-height: 90px; /* Aumentado de 80px para 90px (+10px) */
             letter-spacing: -3.2px;
             margin-bottom: 16px;
             color: rgba(0,0,0,0.9);
