✨ Adiciona efeito gentle à animação: Aplica cubic-bezier(0.25, 0.46, 0.45, 0.94) para transições suaves entre palavras, similar ao efeito gentle do Figma

--- a/figma-design.html
+++ b/figma-design.html
@@ -38,6 +38,7 @@
         }
         .animated-words {
             animation: slideWords 10s infinite;
+            animation-timing-function: cubic-bezier(0.25, 0.46, 0.45, 0.94); /* Gentle easing similar to Figma */
         }
         
         /* Sticky Cards Effect */
