--- a/index-figma.html
+++ b/index-figma.html
@@ -38,6 +38,7 @@
         }
         .animated-words {
             animation: slideWords 10s infinite;
+            animation-timing-function: cubic-bezier(0.25, 0.46, 0.45, 0.94); /* Gentle easing similar to Figma */
         }
         
         /* Sticky Cards Effect */
