--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
 
         .animated-words {
             animation: wordSlide 10s infinite;
+            animation-timing-function: cubic-bezier(0.25, 0.46, 0.45, 0.94); /* Gentle easing similar to Figma */
             transform: translateY(0);
         }
 
