--- a/index-figma.html
+++ b/index-figma.html
@@ -65,6 +65,17 @@
             top: 440px !important; /* 360px + 80px do Card 3 visível */
             z-index: 4 !important;
         }
+        
+        /* Hover effect for left card */
+        .left-card-hover {
+            transition: transform 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94), box-shadow 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+            cursor: pointer;
+        }
+        
+        .left-card-hover:hover {
+            transform: translateY(-8px);
+            box-shadow: 0 16px 32px rgba(52, 131, 250, 0.2);
+        }
     </style>
 </head>
 <body class="bg-white">
@@ -334,7 +345,7 @@
             <!-- Two Cards -->
             <div class="flex gap-8">
                 <!-- Card 1 -->
-                <div class="bg-gradient-to-br from-blue-600 to-purple-700 rounded-[40px] w-[407px] h-[557px] relative overflow-hidden">
+                <div class="left-card-hover bg-gradient-to-br from-blue-600 to-purple-700 rounded-[40px] w-[407px] h-[557px] relative overflow-hidden">
                     <div class="absolute top-8 right-8 text-white/20 text-6xl">💳</div>
                     <div class="absolute inset-0 bg-gradient-to-t from-black/30 to-transparent"></div>
                     <div class="absolute top-8 left-8 right-8">
