--- a/index-figma.html
+++ b/index-figma.html
@@ -74,8 +74,8 @@
         
         .hover-card {
             position: absolute;
-            bottom: 32px;
-            left: 32px;
+            bottom: 48px;
+            right: 32px;
             transform: translateY(100%);
             width: 240px;
             height: 80px;
