--- a/figma-design.html
+++ b/figma-design.html
@@ -74,7 +74,7 @@
         
         .hover-card {
             position: absolute;
-            bottom: 48px;
+            bottom: 80px;
             right: 32px;
             transform: translateY(100%);
             width: 240px;
@@ -100,7 +100,41 @@
             text-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
         }
 
+        .hover-card-2 {
+            position: absolute;
+            bottom: 48px;
+            right: 32px;
+            transform: translateY(100%);
+            width: 240px;
+            height: 80px;
+            background: linear-gradient(135deg, 
+                rgba(255, 255, 255, 0.1) 0%, 
+                rgba(255, 255, 255, 0.2) 50%, 
+                rgba(255, 255, 255, 0.1) 100%);
+            backdrop-filter: blur(20px) saturate(180%);
+            border-radius: 16px;
+            border: 1px solid rgba(255, 255, 255, 0.4);
+            box-shadow: 0 12px 32px rgba(0, 0, 0, 0.2), 
+                        inset 0 1px 0 rgba(255, 255, 255, 0.5);
+            opacity: 0;
+            transition: all 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+            transition-delay: 1s;
+            z-index: 9;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 16px;
+            font-weight: 600;
+            color: white;
+            text-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
+        }
+
         .left-card:hover .hover-card {
+            transform: translateY(0);
+            opacity: 1;
+        }
+
+        .left-card:hover .hover-card-2 {
             transform: translateY(0);
             opacity: 1;
         }
@@ -473,6 +507,9 @@
                     <!-- Hover Card -->
                     <div class="hover-card">
                         <span>💳 Ver detalles</span>
+                    </div>
+                    <div class="hover-card-2">
+                        <span>📊 Más información</span>
                     </div>
                     
                     <!-- Animated Buttons (appear on hover) -->
