--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
 
         .hover-card {
             position: absolute;
-            bottom: 48px;
+            bottom: 80px;
             right: 32px;
             transform: translateY(100%);
             width: 240px;
@@ -556,7 +556,41 @@
             text-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
         }
 
+        .hover-card-2 {
+            position: absolute;
+            bottom: 48px;
+            right: 32px;
+            transform: translateY(100%);
+            width: 240px;
+            height: 80px;
+            background: linear-gradient(135deg, 
+                rgba(255, 255, 255, 0.1) 0%, 
+                rgba(255, 255, 255, 0.2) 50%, 
+                rgba(255, 255, 255, 0.1) 100%);
+            backdrop-filter: blur(20px) saturate(180%);
+            border-radius: 16px;
+            border: 1px solid rgba(255, 255, 255, 0.4);
+            box-shadow: 0 12px 32px rgba(0, 0, 0, 0.2), 
+                        inset 0 1px 0 rgba(255, 255, 255, 0.5);
+            opacity: 0;
+            transition: all 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+            transition-delay: 1s;
+            z-index: 9;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 16px;
+            font-weight: 600;
+            color: white;
+            text-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
+        }
+
         .requirement-card.card1:hover .hover-card {
+            transform: translateY(0);
+            opacity: 1;
+        }
+
+        .requirement-card.card1:hover .hover-card-2 {
             transform: translateY(0);
             opacity: 1;
         }
@@ -967,6 +1001,9 @@
                     <h3>Vende más de $500 por<br>2 meses en Mercado Libre<br>o Mercado Pago</h3>
                     <div class="hover-card">
                         <span>💳 Ver detalles</span>
+                    </div>
+                    <div class="hover-card-2">
+                        <span>📊 Más información</span>
                     </div>
                 </div>
                 <div class="requirement-card card2 dark">
