🔧 Ajusta padding do quadrado amarelo: Adiciona padding-left: 8px + justify-content: flex-start para equilibrar espaçamento do logo ML dentro do ícone push (micro ajuste visual)

--- a/figma-design.html
+++ b/figma-design.html
@@ -129,7 +129,8 @@
             border-radius: 5px;
             display: flex;
             align-items: center;
-            justify-content: center;
+            justify-content: flex-start;
+            padding-left: 8px;
             flex-shrink: 0;
         }
 
