--- a/index-figma.html
+++ b/index-figma.html
@@ -129,7 +129,8 @@
             border-radius: 5px;
             display: flex;
             align-items: center;
-            justify-content: center;
+            justify-content: flex-start;
+            padding-left: 8px;
             flex-shrink: 0;
         }
 
