🔧 Corrige comportamento sticky card 4: Aumenta padding-bottom products (80px→600px) para dar espaço suficiente ao card 4 empurrar os outros mantendo 80px visíveis de cada card

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         /* Products Section */
         .products {
             padding: 84px 0;
-            padding-bottom: 80px; /* 80px + 80px da seção seguinte = 160px total */
+            padding-bottom: 600px; /* Espaço suficiente para 4 cards sticky + scroll conjunto */
             background: white;
         }
 
