--- a/figma-design.html
+++ b/figma-design.html
@@ -352,7 +352,7 @@
     </section>
 
     <!-- Products Section -->
-    <section class="py-20 pb-20">
+    <section class="py-20" style="padding-bottom: 600px;">
         <div class="max-w-[1062px] mx-auto px-10">
             <!-- Title -->
             <div class="text-center mb-[84px]">
