--- a/index-figma.html
+++ b/index-figma.html
@@ -268,7 +268,7 @@
     </section>
 
     <!-- Products Section -->
-    <section class="py-20" style="padding-bottom: 600px;">
+    <section class="py-20" style="padding-bottom: 160px;">
         <div class="max-w-[1062px] mx-auto px-10">
             <!-- Title -->
             <div class="text-center mb-[84px]">
@@ -278,9 +278,10 @@
             </div>
             
             <!-- Product Cards -->
-            <div class="space-y-12">
+            <div class="max-w-[1062px] mx-auto">
+                <div class="sticky top-[200px] h-[740px] z-10">
                 <!-- Dinero Express -->
-                <div class="bg-gradient-to-r from-purple-600 to-blue-600 rounded-3xl h-[420px] relative overflow-hidden shadow-lg cursor-pointer hover:shadow-xl transition-shadow">
+                <div class="bg-gradient-to-r from-purple-600 to-blue-600 rounded-3xl h-[420px] absolute w-full top-0 overflow-hidden shadow-lg cursor-pointer hover:shadow-xl transition-shadow z-[1]">
                     <div class="absolute top-8 right-8 text-white/20 text-8xl">⚡</div>
                     <div class="absolute inset-0 bg-gradient-to-t from-black/30 to-transparent"></div>
                     <div class="relative z-10 p-12 h-full flex flex-col justify-between w-[517px]">
@@ -299,7 +300,7 @@
                 </div>
 
                 <!-- Cuotas Fijas -->
-                <div class="bg-gradient-to-r from-orange-400 to-yellow-500 rounded-3xl h-[420px] relative overflow-hidden shadow-lg cursor-pointer hover:shadow-xl transition-shadow">
+                <div class="bg-gradient-to-r from-orange-400 to-yellow-500 rounded-3xl h-[420px] absolute w-full top-[80px] overflow-hidden shadow-lg cursor-pointer hover:shadow-xl transition-shadow z-[2]">
                     <div class="absolute top-8 right-8 text-white/20 text-8xl">📊</div>
                     <div class="absolute inset-0 bg-gradient-to-t from-black/20 to-transparent"></div>
                     <div class="relative z-10 p-12 h-full flex flex-col justify-between w-[517px]">
@@ -318,7 +319,7 @@
                 </div>
 
                 <!-- Adelanto de Dinero -->
-                <div class="bg-gradient-to-r from-green-600 to-teal-600 rounded-3xl h-[420px] relative overflow-hidden shadow-lg cursor-pointer hover:shadow-xl transition-shadow">
+                <div class="bg-gradient-to-r from-green-600 to-teal-600 rounded-3xl h-[420px] absolute w-full top-[160px] overflow-hidden shadow-lg cursor-pointer hover:shadow-xl transition-shadow z-[3]">
                     <div class="absolute top-8 right-8 text-white/20 text-8xl">💰</div>
                     <div class="absolute inset-0 bg-gradient-to-t from-black/30 to-transparent"></div>
                     <div class="relative z-10 p-12 h-full flex flex-col justify-between w-[517px]">
@@ -337,7 +338,7 @@
                 </div>
 
                 <!-- Porcentaje de Ventas -->
-                <div class="bg-gradient-to-r from-red-500 to-pink-600 rounded-3xl h-[420px] relative overflow-hidden shadow-lg cursor-pointer hover:shadow-xl transition-shadow">
+                <div class="bg-gradient-to-r from-red-500 to-pink-600 rounded-3xl h-[420px] absolute w-full top-[240px] overflow-hidden shadow-lg cursor-pointer hover:shadow-xl transition-shadow z-[4]">
                     <div class="absolute top-8 right-8 text-white/20 text-8xl">📈</div>
                     <div class="absolute inset-0 bg-gradient-to-t from-black/20 to-transparent"></div>
                     <div class="relative z-10 p-12 h-full flex flex-col justify-between w-[517px]">
@@ -353,6 +354,7 @@
                             Peça até <strong>R$ 550.000</strong> e devolva<br>com uma porcentagem de cada venda.
                         </p>
                     </div>
+                </div>
                 </div>
             </div>
         </div>
