🔧 Restaura sticky progressivo + subida final conjunto: Cards individuais sticky durante scroll, frame sobe junto no final (quando Card 4 ativo)

--- a/index-figma.html
+++ b/index-figma.html
@@ -268,7 +268,7 @@
     </section>
 
     <!-- Products Section -->
-    <section class="py-20" style="padding-bottom: 160px;">
+    <section class="py-20" style="padding-bottom: 320px;">
         <div class="max-w-[1062px] mx-auto px-10">
             <!-- Title -->
             <div class="text-center mb-[84px]">
@@ -278,10 +278,9 @@
             </div>
             
             <!-- Product Cards -->
-            <div class="max-w-[1062px] mx-auto">
-                <div class="sticky top-[200px] h-[740px] z-10">
+            <div class="space-y-12">
                 <!-- Dinero Express -->
-                <div class="bg-gradient-to-r from-purple-600 to-blue-600 rounded-3xl h-[420px] absolute w-full top-0 overflow-hidden shadow-lg cursor-pointer hover:shadow-xl transition-shadow z-[1]">
+                <div class="bg-gradient-to-r from-purple-600 to-blue-600 rounded-3xl h-[420px] sticky top-[200px] z-[1] overflow-hidden shadow-lg cursor-pointer hover:shadow-xl transition-shadow">
                     <div class="absolute top-8 right-8 text-white/20 text-8xl">⚡</div>
                     <div class="absolute inset-0 bg-gradient-to-t from-black/30 to-transparent"></div>
                     <div class="relative z-10 p-12 h-full flex flex-col justify-between w-[517px]">
@@ -300,7 +299,7 @@
                 </div>
 
                 <!-- Cuotas Fijas -->
-                <div class="bg-gradient-to-r from-orange-400 to-yellow-500 rounded-3xl h-[420px] absolute w-full top-[80px] overflow-hidden shadow-lg cursor-pointer hover:shadow-xl transition-shadow z-[2]">
+                <div class="bg-gradient-to-r from-orange-400 to-yellow-500 rounded-3xl h-[420px] sticky top-[280px] z-[2] overflow-hidden shadow-lg cursor-pointer hover:shadow-xl transition-shadow">
                     <div class="absolute top-8 right-8 text-white/20 text-8xl">📊</div>
                     <div class="absolute inset-0 bg-gradient-to-t from-black/20 to-transparent"></div>
                     <div class="relative z-10 p-12 h-full flex flex-col justify-between w-[517px]">
@@ -319,7 +318,7 @@
                 </div>
 
                 <!-- Adelanto de Dinero -->
-                <div class="bg-gradient-to-r from-green-600 to-teal-600 rounded-3xl h-[420px] absolute w-full top-[160px] overflow-hidden shadow-lg cursor-pointer hover:shadow-xl transition-shadow z-[3]">
+                <div class="bg-gradient-to-r from-green-600 to-teal-600 rounded-3xl h-[420px] sticky top-[360px] z-[3] overflow-hidden shadow-lg cursor-pointer hover:shadow-xl transition-shadow">
                     <div class="absolute top-8 right-8 text-white/20 text-8xl">💰</div>
                     <div class="absolute inset-0 bg-gradient-to-t from-black/30 to-transparent"></div>
                     <div class="relative z-10 p-12 h-full flex flex-col justify-between w-[517px]">
@@ -338,7 +337,7 @@
                 </div>
 
                 <!-- Porcentaje de Ventas -->
-                <div class="bg-gradient-to-r from-red-500 to-pink-600 rounded-3xl h-[420px] absolute w-full top-[240px] overflow-hidden shadow-lg cursor-pointer hover:shadow-xl transition-shadow z-[4]">
+                <div class="bg-gradient-to-r from-red-500 to-pink-600 rounded-3xl h-[420px] sticky top-[440px] z-[4] overflow-hidden shadow-lg cursor-pointer hover:shadow-xl transition-shadow">
                     <div class="absolute top-8 right-8 text-white/20 text-8xl">📈</div>
                     <div class="absolute inset-0 bg-gradient-to-t from-black/20 to-transparent"></div>
                     <div class="relative z-10 p-12 h-full flex flex-col justify-between w-[517px]">
@@ -354,7 +353,6 @@
                             Peça até <strong>R$ 550.000</strong> e devolva<br>com uma porcentagem de cada venda.
                         </p>
                     </div>
-                </div>
                 </div>
             </div>
         </div>
