--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
         .product-card:nth-child(4) {
             position: relative; /* Card 4 NÃO fica sticky - empurra toda seção */
             z-index: 4;
-            margin-top: -340px; /* Compensa altura dos 3 cards sticky acima */
+            margin-top: -240px; /* Ajustado para não grudar no Card 3 */
         }
 
         .card-content {
