--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         /* Products Section */
         .products {
             padding: 84px 0;
-            padding-bottom: 320px; /* Espaço para sticky progressivo + subida conjunta */
+            padding-bottom: 80px; /* Reduzido para eliminar espaçamento extra */
             background: white;
         }
 
@@ -271,7 +271,7 @@
         .product-card:nth-child(4) {
             position: relative; /* Card 4 NÃO fica sticky - empurra toda seção */
             z-index: 4;
-            margin-top: -240px; /* Ajustado para não grudar no Card 3 */
+            margin-top: -160px; /* Menor overlap - Card 3 não gruda no Card 4 */
         }
 
         .card-content {
