🔧 Remove margin-top negativo Card 4: Restaura espaçamento normal 48px entre Card 3 e Card 4 (igual aos outros cards antes do sticky)

--- a/figma-design.html
+++ b/figma-design.html
@@ -421,7 +421,7 @@
                 </div>
 
                 <!-- Porcentaje de Ventas -->
-                <div class="bg-gradient-to-r from-red-500 to-pink-600 rounded-3xl h-[420px] relative z-[4] -mt-[160px] overflow-hidden shadow-lg cursor-pointer hover:shadow-xl transition-shadow">
+                <div class="bg-gradient-to-r from-red-500 to-pink-600 rounded-3xl h-[420px] relative z-[4] overflow-hidden shadow-lg cursor-pointer hover:shadow-xl transition-shadow">
                     <div class="absolute top-8 right-8 text-white/20 text-8xl">📈</div>
                     <div class="absolute inset-0 bg-gradient-to-t from-black/20 to-transparent"></div>
                     <div class="relative z-10 p-12 h-full flex flex-col justify-between w-[517px]">
