--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
         .product-card:nth-child(4) {
             position: relative; /* Card 4 NÃO fica sticky - empurra toda seção */
             z-index: 4;
-            margin-top: -160px; /* Menor overlap - Card 3 não gruda no Card 4 */
+            /* Sem margin-top negativo - mantém espaçamento normal de 48px */
         }
 
         .card-content {
