--- a/figma-design.html
+++ b/figma-design.html
@@ -789,7 +789,7 @@
             // Posições calculadas para cada card ficar totalmente visível (apenas cards 1, 2, 3)
             const cardPositions = {
                 1: sectionTop - headerHeight - 50, // Card 1: posição inicial (antes do sticky)
-                2: sectionTop - headerHeight + 468, // Card 2: 420px (altura card) + 48px (gap)
+                2: sectionTop - headerHeight + 200, // Card 2: fica parado, só inicia sticky (200px = top sticky)
                 3: sectionTop - headerHeight + 936  // Card 3: 468px + 420px + 48px
                 // Card 4 removido - não precisa de click para visualização
             };
