🎯 Ajusta Card 2: scroll para 280px - Card 1 fica estático (já atrás) + apenas Cards 3 e 4 saem da frente para revelar Card 2

--- a/index-figma.html
+++ b/index-figma.html
@@ -666,7 +666,7 @@
             // Posições calculadas para cada card ficar totalmente visível (apenas cards 1, 2, 3)
             const cardPositions = {
                 1: sectionTop - headerHeight - 50, // Card 1: posição inicial (antes do sticky)
-                2: sectionTop - headerHeight + 200, // Card 2: fica parado, só inicia sticky (200px = top sticky)
+                2: sectionTop - headerHeight + 280, // Card 2: fica parado, Cards 3 e 4 saem da frente
                 3: sectionTop - headerHeight + 936  // Card 3: 468px + 420px + 48px
                 // Card 4 removido - não precisa de click para visualização
             };
