--- a/index.html
+++ b/index.html
@@ -1198,7 +1198,7 @@
             // Posições calculadas para cada card ficar totalmente visível (apenas cards 1, 2, 3)
             const cardPositions = {
                 1: sectionTop - headerHeight - 50, // Card 1: posição inicial (antes do sticky)
-                2: sectionTop - headerHeight + 280, // Card 2: fica parado, Cards 3 e 4 saem da frente
+                2: sectionTop - headerHeight + 200, // Card 2: posição exata onde fica sticky (não se move)
                 3: sectionTop - headerHeight + 936  // Card 3: 468px + 420px + 48px
                 // Card 4 removido - não precisa de click para visualização
             };
