🎯 MOVIMENTO AGRUPADO: Cards se movem JUNTOS como grupo - Cards de cima permanecem agrupados e se movem simultaneamente conforme prints

--- a/figma-design.html
+++ b/figma-design.html
@@ -804,14 +804,14 @@
                 let targetPosition;
                 
                 if (cardNumber === 1) {
-                    // Card 1: fica totalmente visível no topo (posição inicial)
-                    targetPosition = sectionTop - headerHeight + 200; // Card 1 sticky position
+                    // Card 1: todos os outros cards (2,3,4) se movem JUNTOS para baixo
+                    targetPosition = sectionTop - headerHeight + 200; // Card 1 visível, outros agrupados embaixo
                 } else if (cardNumber === 2) {
-                    // Card 2: fica totalmente visível no centro 
-                    targetPosition = sectionTop - headerHeight + 280; // Card 2 sticky position
+                    // Card 2: Card 1 sobe, Cards 3 e 4 se movem JUNTOS para baixo
+                    targetPosition = sectionTop - headerHeight + 280; // Card 2 visível, Card 1 em cima, 3+4 embaixo
                 } else if (cardNumber === 3) {
-                    // Card 3: fica totalmente visível no centro
-                    targetPosition = sectionTop - headerHeight + 360; // Card 3 sticky position
+                    // Card 3: Cards 1 e 2 se movem JUNTOS para cima, Card 4 para baixo
+                    targetPosition = sectionTop - headerHeight + 360; // Card 3 visível, 1+2 agrupados em cima
                 }
                 
                 window.scrollTo({
