--- a/index.html
+++ b/index.html
@@ -232,9 +232,11 @@
         /* Animated title with motion blur */
         .animated-title {
             opacity: 0;
-            transform: translateY(30px);
-            filter: blur(10px);
-            transition: all 1.2s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+            transform: translateY(60px);
+            filter: blur(15px);
+            transition: opacity 1.2s cubic-bezier(0.25, 0.46, 0.45, 0.94),
+                        transform 1.2s cubic-bezier(0.25, 0.46, 0.45, 0.94),
+                        filter 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94);
         }
 
         .animated-title.visible {
