📝 QUEBRA DE LINHA: Remove espaços do <br> no título 'Recibes créditos al vender<br>y usar Mercado Pago'

--- a/index.html
+++ b/index.html
@@ -1018,7 +1018,7 @@
     <!-- Requirements Section -->
     <section class="requirements">
         <div class="container">
-            <h2 class="section-title animated-title" id="requirements-title">Recibes créditos al vender y usar Mercado Pago</h2>
+            <h2 class="section-title animated-title" id="requirements-title">Recibes créditos al vender<br>y usar Mercado Pago</h2>
             <div class="requirements-cards">
                 <div class="requirement-card card1">
                     <h3>Vende más de $500 por<br>2 meses en Mercado Libre<br>o Mercado Pago</h3>
